views for just new postings

--- a/app/views/pages/_page.html.haml
+++ b/app/views/pages/_page.html.haml
@@ -4,6 +4,8 @@
 			= page.url
 		.field.link
 			= link_to "postings (#{page.postings.count})", page_postings_url(page)
+		.field.link
+			= link_to "new (#{page.postings.are_new.count})", all_new_page_postings_url(page)
 	.long_content
 		.field
 			.field.name Found
