--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -9,6 +9,8 @@
 				= link_to 'Pages', pages_url
 			.link
 				= link_to 'Postings', postings_url
+			.link
+				= link_to 'Tasks', tasks_url
 	%div.user_navigation.sub_navigation
 		%div.link
 			- if user_signed_in?
