--- a/public/stylesheets/toast.css
+++ b/public/stylesheets/toast.css
@@ -156,6 +156,11 @@ div.form {
 }
 .object .field.value { display: inline-block; }
 .object.posting.not_loaded, .object.scraper.dne { background-color: #ffd9a9; }
+.object.task .field.error .field.value {
+  padding: 10px;
+  border: 1px solid #222d31;
+  background-color: #ffffff;
+}
 .object.posting .field.description .field.value {
   padding: 10px;
   border: 1px solid #222d31;
@@ -163,6 +168,7 @@ div.form {
 }
 .object { background-color: #d9ffa9; }
 .object.new { background-color: #d2e4fc; }
+.task.error { background-color: #ffd9a9; }
 a {
   text-decoration: none;
   color: #5a584b;
