--- a/app/views/tasks/_task_list.html.haml
+++ b/app/views/tasks/_task_list.html.haml
@@ -1,4 +1,4 @@
 .section.tasks
 	.heading
-		= "Scheduled Tasks"
+		= "Scheduled Tasks (#{DateTime.now.strftime('%Y.%m.%d %H:%M:%S')})"
 	= render :partial => 'task', :collection => tasks
