--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'jquery-1.4.4.min.js' %>
 	<%= javascript_include_tag 'jquery-ujs' %>
 	<%= javascript_include_tag 'highcharts' %>
+	<%= javascript_include_tag 'application' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
